# python-template-for-codex

./: AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.codex/: config.toml
.codex/skills/docs-maintainer/: SKILL.md
.codex/skills/gh-pr-runner/: SKILL.md
.codex/skills/plan-author/: SKILL.md
.codex/skills/plan-implementation-reviewer/: SKILL.md
.codex/skills/plan-reviewer/: SKILL.md
.codex/skills/planner/: SKILL.md
.codex/skills/pytest-driver/: SKILL.md
.codex/skills/repo-guarder/: SKILL.md
.codex/skills/spec-implementation-reviewer/: SKILL.md
.codex/skills/spec-writer/: SKILL.md
.codex/skills/template-bootstrapper/: SKILL.md
.codex/skills/utility-helper/: SKILL.md
.codex/skills/uv-runner/: SKILL.md
.github/workflows/: ci.yml
docs/: CHANGELOG.md  DESIGN.md  REQUIREMENTS.md
plans/: TEMPLATE.md
specs/: TEMPLATE.md
src/python_template_for_codex/: __init__.py  config.py
tests/: test_config.py
